close UseBiasedLocking